--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# PyPI
+*.pypirc
+.pypirc
+
 # Distribution / packaging
 .Python
 build/
@@ -127,4 +131,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-.pypirc
